--- a/assets/css/lingo-admin.css
+++ b/assets/css/lingo-admin.css
@@ -1,24 +1,24 @@
-.acf-row:nth-child(n+1):nth-child(-n+20) .acf-row-handle {
+.col1{
     background: #FD7619!important;
     color: white
 }
 
-.acf-row:nth-child(n+21):nth-child(-n+40) .acf-row-handle {
+.col2 {
     background: #FFDF2F!important;
     color: white
 }
 
-.acf-row:nth-child(n+41):nth-child(-n+60) .acf-row-handle {
+.col3 {
     background:  #BDDA46!important;
     color: white
 }
 
-.acf-row:nth-child(n+61):nth-child(-n+80) .acf-row-handle {
+.col4  {
     background: #338B74!important;
     color: white
 }
 
-.acf-row:nth-child(n+81):nth-child(-n+100) .acf-row-handle {
+.col5{
     background: #668994!important;
     color: white
 }
